fix toolbar vertical overflow behavior

--- a/assets/base.styl
+++ b/assets/base.styl
@@ -50,6 +50,8 @@ colorItemsPerRow = 7
 
   .ql-hidden
     display: none
+  .ql-out-bottom, .ql-out-top
+    visibility: hidden
 
   .ql-tooltip
     position: absolute
